<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@android:color/transparent"
            android:minHeight="?attr/actionBarSize"
            android:visibility="gone"
            app:menu="@menu/item_menu"
            app:navigationIcon="@drawable/ic_menu">

            <LinearLayout
                android:id="@+id/llToolbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_search">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_search"
                    app:tint="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/hint"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:layout_marginBottom="60dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimary"
                android:padding="4dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_menu" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:src="@drawable/oyo" />

                        <LinearLayout
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_notification" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:layout_margin="10dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/bg_search">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_search"
                            app:tint="@android:color/darker_gray" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-thin"
                            android:text="@string/hint"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>

            <!--            <FrameLayout-->
            <!--                android:id="@+id/fragment_container"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_marginBottom="56dp"-->
            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@android:color/darker_gray"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text1"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/h6"
                    android:scaleType="fitXY"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text3"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/h4"
                    android:scaleType="fitXY"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text4"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:cardCornerRadius="8dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/h3"
                    android:scaleType="fitXY"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text5"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvKinda"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt6"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/h3"
                android:scaleType="fitXY"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt7"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt8"
                android:textColor="@color/red"
                android:drawableEnd="@drawable/ic_next"
                android:drawableTint="@color/red"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="18dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>